Dark mode fixes

--- a/fixed-frontend/src/app/globals.css
+++ b/fixed-frontend/src/app/globals.css
@@ -6,7 +6,7 @@ body {
   background-color: #EAEAEB;
 }
 .dark body{
-  background-color: #6B7280;
+  background-color: #0C4A6E;
 }
 
 .banner {
@@ -17,6 +17,9 @@ body {
   justify-content: space-between;
 }
 
+.dark .title{
+  color: rgb(219 234 254);
+}
 
 .title {
   color: black;
